[0.0.6] Добавлена обработка комментариев, Package Mode
- Обновили Make до 0.0.6
- Включён Package Mode
- добавили обработку комментариев (получение комментариев, получение комментария)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "commentservice"
 version = "0.0.1"
 description = "comment-service for esclient"
-package-mode = false
+package-mode = true
 authors = ["esclient"]
 readme = "README.md"
 
