--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ grpcio-reflection = "^1.72.1"
 pydantic = "^2.11.7"
 pydantic-settings = "^2.10.1"
 psycopg2-binary = "^2.9.10"
+grpcio-tools = "^1.73.1"
 
 [tool.poetry.group.dev.dependencies]
 grpcio = "^1.72.1"
-grpcio-tools = "^1.72.1"
+grpcio-tools = "^1.73.1"
 protobuf = "^6.31.1"
+pytest = "^8.4.1"
 
 [tool.poetry.scripts]
 run-server = "commentservice.server:serve"
