--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,13 +102,14 @@ dependencies = [
     "pydantic-settings==2.11.0",
     "psycopg2-binary==2.9.10",
     "watchfiles==1.1.0",
+    "asyncpg>=0.30.0",
 ]
 requires-python = ">=3.13"
 readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-run-server = "commentservice.server:serve"
+run-server = "commentservice.server:main"
 
 [dependency-groups]
 dev = [
