--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,10 @@ explicit_package_bases = true
 mypy_path = ["src"]
 plugins = ["pydantic.mypy"]
 
+[[tool.mypy.overrides]]
+module = "asyncpg.*"
+ignore_missing_imports = true
+
 [project]
 name = "commentservice"
 version = "0.0.1"
