Переход на асинхронное выполнение (#28)
Co-authored-by: Tecquo <46904988+Tecquo@users.noreply.github.com>
Co-authored-by: Andrey Kataev <kata3v.andrey@yandex.ru>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,10 @@ explicit_package_bases = true
 mypy_path = ["src"]
 plugins = ["pydantic.mypy"]
 
+[[tool.mypy.overrides]]
+module = "asyncpg.*"
+ignore_missing_imports = true
+
 [project]
 name = "commentservice"
 version = "0.0.1"
@@ -102,13 +106,14 @@ dependencies = [
     "pydantic-settings==2.11.0",
     "psycopg2-binary==2.9.10",
     "watchfiles==1.1.0",
+    "asyncpg>=0.30.0",
 ]
 requires-python = ">=3.13"
 readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-run-server = "commentservice.server:serve"
+run-server = "commentservice.server:main"
 
 [dependency-groups]
 dev = [
