--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -7,8 +7,14 @@ on:
     branches: [ main ]
     types: [ opened, synchronize, reopened ]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   lint-and-test:
-    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@main
+    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@v1.0.0
     with:
       python-version: '3.13.7'
+    secrets:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
