--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ dev = [
     "grpc-stubs==1.53.0.6",
     "protobuf==6.32.1",
     "pytest==8.4.2",
+    "pytest-cov==5.0.0",
     "pytest-mock==3.15.1",
     "black==25.9.0",
     "isort==6.0.1",
