--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -15,6 +15,6 @@ jobs:
   lint-and-test:
     uses: esclient/tools/.github/workflows/lint-and-test-python.yml@455a2700e3d2a08c371b072b1327689d76582758
     with:
-      python-version: '3.13.7'
+      python-version: "3.13.7"
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
