--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
+asyncio_mode = "strict"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 
@@ -127,9 +128,11 @@ dev = [
     "grpc-stubs==1.53.0.6",
     "protobuf==6.32.1",
     "pytest==8.4.2",
+    "pytest-asyncio==0.24.0",
     "pytest-cov==5.0.0",
     "pytest-mock==3.15.1",
-    "Faker==30.8.2",
+    "pytest-faker==2.0.0",
+    "Faker==37.11.0",
     "black==25.9.0",
     "isort==6.0.1",
     "flake8==7.3.0",
