--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -13,8 +13,9 @@ permissions:
 
 jobs:
   lint-and-test:
-    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@455a2700e3d2a08c371b072b1327689d76582758
+    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@d3ed2b83a8b318be00d3c211560f62ac40efc2d2
     with:
       python-version: "3.13.7"
+      source: "commentservice"
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
