--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   lint-and-test:
-    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@v1.0.8
+    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@c42231390bcf175f277712f0db1174c39257258a
     with:
       python-version: "3.13.7"
       source: "commentservice"
