--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   lint-and-test:
-    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@6e3e64fee289eacd97170c58ba6b5fce2c8852eb
+    uses: esclient/tools/.github/workflows/lint-and-test-python.yml@v1.0.0
     with:
       python-version: "3.13.7"
       source: "commentservice"
