--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,6 +125,7 @@ dependencies = [
     "psycopg2-binary==2.9.10",
     "watchfiles==1.1.0",
     "asyncpg>=0.30.0",
+    "confluent-kafka>=2.12.2",
 ]
 requires-python = ">=3.13"
 readme = "README.md"
